--- a/client/index.html
+++ b/client/index.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>ChatGPT</title>
+    <title>Rohan's AI</title>
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
     <div id="app">
       <div id="chat_container"></div>
         <form>
-          <textarea name="prompt" id="" cols="1" rows="1" placeholder="Ask ChatGPT.."></textarea>
+          <textarea name="prompt" id="" cols="1" rows="1" placeholder="Ask Rohan's AI.."></textarea>
           <button type="submit"><img src="assets/send.svg" /></button>
         </form>
     </div>
